<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp150"
                android:background="@color/colorAccent"
                android:lines="1"
                android:padding="@dimen/dp36"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/sp48"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Chappie" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="185dp"
                android:layout_height="@dimen/dp8"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp24"
                android:contentDescription="@string/poster_description"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/release_date"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp8"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp24"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="2015" />

            <TextView
                android:id="@+id/rating_average"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp8"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp8"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="8.1/10" />

            <TextView
                android:id="@+id/runtime"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp8"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp16"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/runtime_label"
                app:layout_constraintTop_toBottomOf="@+id/runtime_label"
                tools:text="120min" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Large.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp16"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                app:SpinKit_Color="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/rating_average" />

            <TextView
                android:id="@+id/plotSynopsis"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp8"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp8"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster"
                tools:text="overview" />

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp1"
                android:layout_marginEnd="@dimen/dp16"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp8"
                android:background="@color/lineColor"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plotSynopsis" />

            <TextView
                android:id="@+id/trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/trailers"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout1" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp32"
                android:layout_marginLeft="@dimen/dp32"
                android:layout_marginRight="@dimen/dp32"
                android:layout_marginStart="@dimen/dp32"
                android:layout_marginTop="@dimen/dp8"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers" />

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp1"
                android:layout_marginEnd="@dimen/dp16"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp16"
                android:background="@color/lineColor"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers_rv" />

            <TextView
                android:id="@+id/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/reviews"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp32"
                android:layout_marginLeft="@dimen/dp32"
                android:layout_marginRight="@dimen/dp32"
                android:layout_marginStart="@dimen/dp32"
                android:layout_marginTop="@dimen/dp8"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews" />

            <TextView
                android:id="@+id/no_reviews_tv"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp32"
                android:layout_marginLeft="@dimen/dp32"
                android:layout_marginRight="@dimen/dp32"
                android:layout_marginStart="@dimen/dp32"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/no_reviews_available"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews" />

            <TextView
                android:id="@+id/loading_more_data_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp16"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:text="@string/loading_more_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/spin_kit" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp32"
                android:text="@string/released"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/runtime_label"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/runtime"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/release_date" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/average_rate"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintStart_toStartOf="@+id/runtime_label"
                app:layout_constraintTop_toBottomOf="@+id/runtime" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_favorite_border_red_a700_24dp"
        android:visibility="gone"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="right|bottom" />

</android.support.design.widget.CoordinatorLayout>